@@ -1,5 +1,9 @@
 2011-06-09  Werner Koch  <wk@g10code.com>
 
+	* pubkey.c (oaep_encode, pss_encode): Add args RANDOM_OVERRIDE and
+	RANDOM_OVERRIDE_LEN.
+	(sexp_data_to_mpi): Extract new random-override parameter.
+
 	* pubkey.c (pss_encode, pss_verify): Use VALUE verbatim for MHASH.
 	(octet_string_from_mpi): Add arg SPACE.
 
